[fix]#8380 align rack buttons

--- a/css/modules.less
+++ b/css/modules.less
@@ -2069,6 +2069,21 @@ article.selected{
 	}
 }
 
+section.lightbox-window{
+	form#upload-form{
+		h3{
+			width: auto;
+			float: none;
+		}
+		.hidden-content{
+			float: left;
+		}
+		button, .right-magnet input{
+			margin-bottom: 5px;
+		}
+	}
+}
+
 .lightbox-window .datepicker, .lightbox-view .datepicker, .lightbox .datepicker{
 	z-index: 1100;
 }
